# karajan-code

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  KARAJAN-CODE-PLAN.md  MIGRATION-v2.md  README.md  SECURITY.md  TODO-test-installer.md  docker-compose.yml  karajan-code-project.md  package-lock.json  package.json  rulesync.jsonc  sonar-project.properties  vitest.config.js
.changeset/: strict-sonar-project-key.md
.githooks/: commit-msg  post-commit  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE.md  DOCKER.md  GETTING-STARTED.md  README.es.md  SKILLS.md  articulo-devto-en.md  articulo-devto-es.md  custom-roles.md  install-two-instances.md  multi-instance.md  troubleshooting.md  v2-proxy-plan.md  v2-release-notes.md  version-update-checklist.md  why-vanilla-js.md
examples/: README.md
identidad marca/: karajan  logo.af
scripts/: ai-attribution-guard.yml  build-sea.mjs  esbuild-sea.config.mjs  install-guard-all-repos.sh  install-kj.sh  install.js  install.sh  postinstall.js  protect-all-repos.sh  setup-multi-instance.sh
src/: activity-log.js  bootstrap.js  cli.js  config.js  orchestrator.js  repeat-detector.js  session-cleanup.js  session-store.js
templates/: coder-rules.md  docker-compose.sonar.yml  kj.config.yml  review-rules.md
tests/: activity-log.test.js  agent-detect.test.js  agent-fallback.test.js  agents-availability.test.js  agents-base.test.js  agents-command.test.js  (+234 more)
wrappers/python/: README.md  pyproject.toml
wrappers/python/karajan/: __main__.py
(+289 files in other folders)
